# Graphics

./: README.md
Raytracer/: CMakeLists.txt  Cylinder.cpp  Cylinder.h  Plane.cpp  RayTracer.cpp
Train_Animation/: CMakeLists.txt  FavershamModels.cpp  FavershamModels.h  FavershamWorld.cpp  asphalt.tga  station_brick.tga  station_concrete.tga  station_wood.tga
